some changes is added

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ color: red;
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    /* border: 2px solid black; */
+    border: 2px solid black;
     display: inline-block;
 }
 .night-out i{
