--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h1{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 1200px;
+    width: 160vh;
     position: relative;
     left: 130px;
     
@@ -42,6 +42,7 @@ h1{
     height: 53px;
     width: 243px;
     border: none;
+    background: transparent;
 }
 .location{
     display: inline-block;
@@ -177,7 +178,7 @@ color: red;
     font-size: 25px;
     position: relative;
     top: 9px;
-    left: 8px;
+    left: 13px;
 }
 .body-of-food{
     margin-top: 30px;
@@ -286,4 +287,72 @@ color: red;
     margin-left: 4px;
     margin-right: 4px;
 }
+/* footer */
+.footer{
+    width: 100%;
+    height: 60vh;
+    background: rgb(248 248 248);
 
+}
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    width: 1000px;
+    position: relative;
+    left: 200px;
+    padding-top: 2rem;
+    
+}
+.select-for-footer{
+    width: 100px;
+    margin: 6px;
+    border-radius: 5px;
+    background: transparent;
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-size: medium;
+    border: 0.5px solid black;
+    padding-left: 10px;
+}
+.panal1 {
+    display: flex;
+    justify-content: space-evenly;
+    
+  
+    padding-top: 40px;
+    padding-bottom: 20px;
+
+}
+
+ul p {
+    font-size: 18px;
+    margin-bottom: 10px;
+    
+}
+
+ul a {
+    
+    display: block;
+    margin-bottom: 10px;
+    text-decoration: none;
+    color: rgb(110, 104, 104);
+    font-size:18px ;
+}
+/* media qurey */
+@media screen and (max-width:360px) {
+    .navbar{
+        
+     
+        
+       flex-direction: column;
+        width:80vh;
+        
+        left: 0;
+        
+    }
+    .search-icon{
+        display: flex;
+        
+        align-items: start;
+    }
+}
